--- a/Cargo.toml
+++ b/Cargo.toml
@@ -70,7 +70,7 @@ pnet_datalink = "0.27.2"
 
 [features]
 # Nothing by default
-default = []
+default = ["freebind"]
 
 # Easily turn it all on
 full = [
@@ -80,8 +80,10 @@ full = [
     "server",
     "stream",
     "runtime",
+    "freebind"
 ]
 
+freebind = []
 # HTTP versions
 http1 = []
 http2 = ["h2"]
